--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,5 @@
-node_modules/**/*
-.expo/*
-npm-debug.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-*.orig.*
-web-build/
+/bin/
+demo/
+node_modules/
 .env
-
-# macOS
-.DS_Store
+.project
