--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "neo4j-driver": "^4.2.1",
     "pg": "^8.4.2"
   },
   "devDependencies": {
