--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/ShubhankarKG/crime_analyser_mobile#readme",
   "dependencies": {
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
